fixed collision. working fine now. removed .o

--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,11 @@
 /dataSources/
 /dataSources.local.xml
 */*/*.o
-../objs/*.o
-../objs/allocs/*.o
-../objs/gnl/*.o
-../objs/str/*.o
-../objs/exit/*.o
-../objs/map/*.o
-../objs/parsing/*.o
-../objs/raycasting/*.o
+objs/*.o
+objs/allocs/*.o
+objs/gnl/*.o
+objs/str/*.o
+objs/exit/*.o
+objs/map/*.o
+objs/parsing/*.o
+objs/raycasting/*.o
