--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
 	"C_Cpp.errorSquiggles": "disabled",
 	"files.associations": {
 		"defines.h": "c",
-		"structs.h": "c"
+		"structs.h": "c",
+		"chrono": "c",
+		"cmath": "c",
+		"random": "c"
 	}
 }
