--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"C_Cpp.errorSquiggles": "disabled",
+	"editor.insertSpaces": false,
 	"files.associations": {
 		"defines.h": "c",
 		"structs.h": "c",
