--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
 	"files.associations": {
 		"cub3d.h": "c",
 		"parse.h": "c",
-		"cstdlib": "c"
+		"cstdlib": "c",
+		"*.tcc": "c",
+		"fstream": "c"
 	},
 	"C_Cpp.errorSquiggles": "disabled"
 }
